--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js" charset="utf-8"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
@@ -22,7 +23,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" ></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -49,7 +50,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
-  <script src="samples.json"></script>
+  <!-- <script src="samples.json"></script> -->
   
 </body>
 
